# FeeLLGood

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  License.txt  README.md  affichage.cc  assemblage.cc  base_projection.cc  beacons.h  chapeaux.cc  chronometer.h  config.h  config.h.in  cputime.cc  cuboidMaker.py  default-settings.yml  dialog.cc  direction.cc  electrostatSolver.cpp  electrostatSolver.h  element.h  ellipsoid.msh  energy.cc  energy.cpp  evolution.cc  example0.py  example1.py  example2.py  example3.py  example4.py  expression_parser.cpp  expression_parser.h  extract_comment.cc  facette.cpp  facette.h  feellgoodSettings.cpp  feellgoodSettings.h  (+63 more)
.github/: dependabot.yml
.github/workflows/: docker-build.yml  tests.yml
alg/: alg.h  bicg.h  cg.h  coeff.h  denseMat.h  iter.h  sparseMat.h  sparseVect.h
algebra/: algebra.h  algebraCore.h  bicg.h  cg.h  coeff.h  iter.h  sparseMat.h  sparseVect.h
ci-tests/: README.md  Vagrantfile  benchmark.py  full_test.py  install-dependencies.sh  test-vm
examples/: bad_cuboid_1  bad_cuboid_4  cuboid.msh  ellipsoid.msh  ellipsoidLowRes.msh  example0.py  example1.py  example2.py  example3.py  example4.py  example5.py  example6.sh  example7.py  feellgood  optimize-max_iter.py  tube.py
python-modules/: README.md  core.py  meshMaker.py  pyproject.toml  settingsMaker.py
src/: CMakeLists.txt  chronometer.cpp  chronometer.h  config.h.in  default-settings.yml  electrostatSolver.cpp  electrostatSolver.h  element.h  energy.cpp  expression_parser.cpp  expression_parser.h  facette.h  fem.h  fmm_demag.h  linear_algebra.cpp  linear_algebra.h  main.cpp  mesh.cpp  mesh.h  meshUtils.h  node.h  read.cpp  recentering.cpp  save.cpp  settings.cpp  settings.h  solver.cpp  solver.h  spinAccumulationSolver.cpp  spinAccumulationSolver.h  tags.cpp  tags.h  tetra.cpp  tetra.h  time_integration.cpp  time_integration.h  triangle.cpp  triangle.h
src/algebra/: algebra.h  algebraCore.h  bicg.h  iter.h  sparseMat.h
tests/: CMakeLists.txt  ut_anisotropy.cpp  ut_config.h.in  ut_facette.cpp  ut_node.cpp  ut_pt3D.cpp  ut_tetra.cpp  ut_time_int.cpp  ut_tiny.cpp
tools/: README.md  configurator  convert2hdf5  convert2vtk  convert2vtk.py  cuboidMaker.py  cylinderMaker.py  ellipsoidMaker.py  fg-3D  fg-configurator  fg-gensol  fg-h5extract  fg-merge-sol  fg-mesh-stat  fg-plot  fg-sol2hdf5  fg-sol2vtk  h5extract  icoMaker.py  meshMaker.py  readme.txt  settingsMaker.py  show.py  test_cuboid.py
tools/rev_CMK/: CMakeLists.txt  README.md  readme.txt  rev_CMK.cpp  rev_CMK.h
unit-tests/: CMakeLists.txt  sparse_matrix.h  tiny.h  ut_OMP_solver.cpp  ut_alg.cpp  ut_algebra.cpp  ut_algebra_bicg.cpp  ut_anisotropy.cpp  ut_config.h.in  ut_dukTapeParser.cpp  ut_element.cpp  ut_energy.cpp  ut_fac_charges.cpp  ut_facette.cpp  ut_index.cpp  ut_log-stats.cpp  ut_node.cpp  ut_pt3D.cpp  ut_readMesh.cpp  ut_region.cpp  ut_solver.cpp  ut_solver.h  ut_tet_charges.cpp  ut_tet_lumping.cpp  ut_tetra.cpp  ut_thiele.cpp  ut_time_int.cpp  ut_tiny.cpp  ut_tools.h  ut_tri_charges.cpp  ut_triangle.cpp
unit-tests/meshes/: bad_cuboid_1.msh  bad_cuboid_2.msh  bad_cuboid_3.msh  bad_cuboid_4.msh
